src/objects/Rate_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateOnly__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCM_On_Site__c</fullName>
        <label>MCM-On Site</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Professional_Rate__c</fullName>
        <label>Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Mileage_Rate__c</fullName>
        <label>Special Services Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Professional_Rate__c</fullName>
        <label>Special Services Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rush_Travel_Wait_Rate__c</fullName>
        <label>Special Services Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Wait_Rate__c</fullName>
        <label>Travel/Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Professional_Rate__c</columns>
        <columns>Travel_Wait_Rate__c</columns>
        <columns>Mileage_Rate__c</columns>
        <columns>Rush_Professional_Rate__c</columns>
        <columns>Rush_Travel_Wait_Rate__c</columns>
        <columns>Rush_Mileage_Rate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Job Analysis</value>
        </filters>
        <filters>
            <field>Professional_Rate__c</field>
            <operation>notEqual</operation>
            <value>105</value>
        </filters>
        <label>Rate Cards</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Rate Card State</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>